# CAIO-RevTry

./: .env.example  .gitignore  CLAUDE.md  CODEX-HANDOFF.md  requirements.txt  vercel.json
src/: pyproject.toml  requirements.txt
src/agents/: campaign_craft_agent.py  conversation_analyst_agent.py  enrichment_agent.py  followup_draft_agent.py  recon_agent.py  segmentation_agent.py
src/dashboard/: app.py  auth.py  briefing_loader.py  followup_storage.py  storage.py
src/integrations/: anthropic_client.py  apollo_client.py  bettercontact_client.py  clay_client.py  ghl_client.py  ghl_service.py  heyreach_client.py  instantly_client.py  waterfall.py
src/models/: __init__.py  schemas.py
src/persistence/: __init__.py  base.py  factory.py  file_store.py  postgres_store.py  schema.sql
src/pipeline/: circuit_breaker.py  dedup.py  dispatcher.py  feedback_processor.py  followup_dispatcher.py  followup_orchestrator.py  kpi_tracker.py  rate_limiter.py  runner.py  scheduler.py
src/scripts/: ghl_audit.py  ghl_conversation_scanner.py  ghl_enrich.py  ghl_pipeline.py
src/tests/: conftest.py  test_anthropic_client.py  test_briefing_loader.py  test_circuit_breaker.py  test_conversation_analyst.py  test_conversation_scanner.py  test_dashboard.py  test_dedup.py  test_dispatcher.py  test_followup_dispatcher.py  test_followup_draft_agent.py  test_followup_orchestrator.py  test_followup_storage.py  test_followup_validators.py  test_ghl_client.py  test_ghl_enrich.py  test_ghl_pipeline.py  test_guards.py  test_heyreach_client.py  test_instantly_client.py  test_kpi_tracker.py  (+7 more)
(+71 files in other folders)
