[project]
name = "revtry"
version = "0.1.0"
description = "Revenue Operations Sentry - Campaign Draft Pipeline"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "httpx>=0.27",
    "fastapi>=0.109",
    "uvicorn>=0.27",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "anthropic>=0.40",
    "apscheduler>=3.10",
    "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
